# rds-data

./: README.md  cabal.project  rds-data-migration.cabal  rds-data.cabal
.github/workflows/: ci.yml
app/App/: Config.hs  Console.hs
app/App/AWS/: Env.hs
app/App/Cli/: Options.hs  Run.hs  Types.hs
app/App/Cli/Run/: BatchExecuteStatement.hs  Describe.hs  Down.hs  Example.hs  ExecuteStatement.hs  LocalStack.hs  Up.hs
db/: insert.yaml  migration.yaml  sample.yaml  select.yaml  show.yaml
integration/Test/Data/RdsData/: TestTypes.hs
integration/Test/Data/RdsData/Migration/: ConnectionSpec.hs
polysemy/Data/RdsData/: Polysemy.hs
polysemy/Data/RdsData/Polysemy/: Core.hs  Error.hs  Migration.hs
src/Data/RdsData/: Aws.hs  Default.hs  Migration.hs  Orphans.hs
src/Data/RdsData/Decode/: Array.hs  Row.hs  ToRows.hs  Value.hs
src/Data/RdsData/Encode/: Param.hs  Params.hs  Row.hs  ToSqlParameters.hs  Value.hs
src/Data/RdsData/Internal/: Show.hs
src/Data/RdsData/Migration/: Types.hs
src/Data/RdsData/Types/: Array.hs  EncodedParams.hs  Param.hs  Value.hs
test/Data/: RdsDataSpec.hs
test/Data/RdsData/Migration/: ConnectionSpec.hs
test/Data/RdsData/Migration/Polysemy/: Cluster.hs  Env.hs  Types.hs  Workspace.hs
test/Test/Data/RdsData/Migration/: ConnectionSpec.hs
test/Test/Data/RdsData/Migration/Polysemy/: Cluster.hs  Env.hs  Types.hs  Workspace.hs
testlib/Data/RdsData/Polysemy/Test/: Cluster.hs  Env.hs  Workspace.hs
